<?xml version="1.0"?>
<package>
  <name>tue_control_tools</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="todo@tue.nl">todo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tue_control_rtt_msgs</build_depend>
  <run_depend>tue_control_rtt_msgs</run_depend>

  <build_depend>tue_control</build_depend>
  <run_depend>tue_control</run_depend>

</package>
